[package]
name = "fixred"
version = "1.0.0"
edition = "2018"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = "Command line tool to fix outdated URLs in files with redirected ones"
license = "MIT"
homepage = "https://github.com/rhysd/fixred#readme"
repository = "https://github.com/rhysd/fixred"
readme = "README.md"
include = [
    "/src",
    "/LICENSE.txt",
    "/README.md",
]
categories = ["command-line-utilities"]
keywords = ["tool", "fixer", "outdated-links"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7"
anyhow = "1"
chashmap = "2"
clap = { version = "3.0.0-beta", default-features = false, features = ["std", "color", "suggestions"] }
curl = "0.4"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
log = "0.4"
rayon = "1"
regex = "1"
walkdir = "2"

[features]
default = []
